--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "main": "index.ts",
     "scripts": {
-        "start": "pm2 start index.ts --name hello_aws --log logs/app.log",
+        "start": "pm2 start index.ts --name hello_aws --log ../logs/app.log",
         "stop": "pm2 stop hello_aws",
         "build": "echo 'Building project...'"
     },
